# lament-configuration

./: .drone.yml  .gitignore  .prettierignore  BUILD.bazel  DEVELOPING.md  Dockerfile  MODULE.bazel  README.md  lament-configuration.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tasks.py  webpack.config.js
js/: index.js  serviceWorker.js
lc/: app.py  config.py  error.py  main.py  migration.py  model.py  request.py  requests.py  routes.py  view.py  web.py
lc/static/: main.css
migrations/: __init__.py  m_0001_add_meta_table.py
scripts/: aisamanra.json  migrate.py  populate.py
static/: lc.js  main.css  manifest.json
stubs/: environ.py  peewee.py  pytest.py
stubs/passlib/: apps.py
stubs/playhouse/: migrate.py  shortcuts.py  sqlite_ext.py
stubs/pystache/: __init__.py  loader.py
templates/: add_link.mustache  add_user.mustache  config.mustache  edit_link.mustache  error.mustache  import.mustache  link.mustache  linklist.mustache  login.mustache  main.css  main.mustache  message.mustache
tests/: config.py  model.py  routes.py
