[tool.poetry]
name = "lament-configuration"
version = "0.1.0"
description = ""
authors = ["Getty Ritter <gettylefou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
peewee = "^3.13.2"
pystache = "^0.5.4"
requests = "^2.23.0"
dataclasses-json = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
