[project]
name = "lament-configuration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses-json>=0.6.7",
    "environ-config>=24.1.0",
    "flask>=3.1.2",
    "gunicorn>=25.1.0",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "peewee>=3.19.0",
    "pystache>=0.6.8",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "invoke>=2.2.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "types-passlib>=1.7.7.20250602",
    "types-peewee>=3.19.0.20260109",
]

[tool.setuptools]
packages = ["lc"]
